# Rune-Editor

./: LICENSE  README.md
Rune-Editor/: keybindings.json
Rune-Editor/rune-lang/: CMakeLists.txt  Makefile  rune_lang
Rune-Editor/rune-lang/include/: RuneParser.hpp
Rune-Editor/rune-lang/src/: RuneParser.cpp  main.cpp
docs/: RuneLanguage.md
examples/: file_operations.rune  memory_management.rune  process_management.rune  system_info.rune
kernel/: Makefile  config.txt  setup.sh
kernel/include/: ghost_io.h  ghost_vga.h  gpio.h  system.h  timer.h  uart.h
kernel/src/: boot.S  boot.asm  kernel.c  kernel.ld  link.ld
rune-lang/: CMakeLists.txt  README.md
rune-lang/include/: GhostSystem.hpp  GhostTerminal.hpp  RuneError.hpp  RuneLogger.hpp  RuneMonitor.hpp  RuneParser.hpp  RuneSystem.hpp
rune-lang/src/: GhostSystem.cpp  GhostTerminal.cpp  RuneParser.cpp  RuneSystem.cpp  ghost_terminal_main.cpp  main.cpp
rune-lang/tests/: rune_test.cpp
